bug fix delete extra margin from cake variety card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -854,8 +854,7 @@ select option{
         text-align: center;
     }
 
-    .cake-variety-card-group{
-        margin: auto;
+    .cake-variety-card-group{        
         margin-bottom: 1rem;
     }
     .cake-variety-card{
